# ros-yolov5-detection

yolov5/: CMakeLists.txt  openvino_listener.cpp  package.xml  sender.cpp
